--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,8 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
-          /></div>
+            ><img id="logo" src="" width="96" height="96"
+            /></div>
     </nav>
 
     <main id="main">
